apps/devtools/coder/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-https
  namespace: coder
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
  hostnames:
  - "coder.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coder
          port: 80
